#31: refactoring code to SonnaLint pattern